--- a/scalafin-time/pom.xml
+++ b/scalafin-time/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <properties>
-        <surefire.settings>-Dspecs2.console</surefire.settings>
+        <surefire.settings>-Dspecs2.console -Dspecs2.commandline=html</surefire.settings>
         <scala.version>2.10.1</scala.version>
         <specs2.version>2.3.8</specs2.version>
         <scalacheck.version>1.11.1</scalacheck.version>
@@ -102,6 +102,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.pegdown</groupId>
+            <artifactId>pegdown</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -114,6 +120,10 @@
                 <version>3.1.0</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
+<!--                    <args>
+                        <arg>-Xlog-implicits</arg>
+                        <arg>-Yinfer-debug</arg>
+                    </args>-->
                 </configuration>
                 <executions>
                     <execution>
