--- a/scalafin-time/pom.xml
+++ b/scalafin-time/pom.xml
@@ -23,12 +23,6 @@
 	<dependencies>
 
         <dependency>
-            <groupId>com.github.nscala-time</groupId>
-            <artifactId>nscala-time_2.10</artifactId>
-            <version>0.4.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.6</version>
@@ -40,8 +34,6 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.1</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -71,19 +63,17 @@
             <artifactId>scalacheck_2.10</artifactId>
             <version>${scalacheck.version}</version>
         </dependency>
-
-
-        <!--<dependency>-->
-			<!--<groupId>com.github.nscala-time</groupId>-->
-			<!--<artifactId>nscala-time_2.10</artifactId>-->
-			<!--<version>0.4.0</version>-->
-		<!--</dependency>-->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.2</version>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-convert</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
 			<groupId>org.scalaz</groupId>
 			<artifactId>scalaz-core_2.10</artifactId>
 			<version>7.0.5</version>
